--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,21 +7,23 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "apollo-boost": "^0.4.7",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "apollo-link": "^1.2.14",
+    "apollo-link-http": "^1.5.17",
+    "core-js": "^3.6.4",
     "graphql": "^15.0.0",
+    "graphql-tag": "^2.10.3",
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.3",
-    "vue-router": "^3.1.6",
-    "vuex": "^3.1.3"
+    "vue-router": "^3.1.6"
   },
   "devDependencies": {
+    "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-router": "~4.3.0",
-    "@vue/cli-plugin-typescript": "~4.3.0",
-    "@vue/cli-plugin-vuex": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
-    "typescript": "~3.8.3",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
